<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/personDataFragment"
            android:icon="@drawable/ic_person"
            android:title="@string/info" />
        <item
            android:id="@+id/historyFragment"
            android:icon="@drawable/ic_history"
            android:title="@string/history" />
    </group>
    <item android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/exit"
                android:icon="@drawable/ic_exit_to_app"
                android:title="@string/exit" />
        </menu>
    </item>

</menu>